Migrate to zinit

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -6,9 +6,7 @@ depends = []
 
 [zsh.files]
 "zshrc" = "~/.zshrc"
-#"antigen.zsh" = "~/.antigen.zsh"
-"antigenrc" = "~/.antigenrc"
-"p10k.zsh" = "~/.p10k.zsh"
+"starship.toml" = "~/.config/starship.toml"
 
 [kitty.files]
 "kitty.conf" = "~/.config/kitty/kitty.conf"
