--- a/kitty.conf
+++ b/kitty.conf
@@ -301,9 +301,10 @@ cursor_blink_interval 0
 
 #: }}}
 
-#: Mouse {{{
+: Mouse {{{
 
 # mouse_hide_wait 3.0
+mouse_hide_wait 0
 
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
@@ -342,6 +343,7 @@ cursor_blink_interval 0
 #: URLs are allowed.
 
 # copy_on_select no
+copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, simply selecting text with the mouse will cause the text
@@ -376,6 +378,7 @@ cursor_blink_interval 0
 #: instead, if available, or fallback to 0.5.
 
 # focus_follows_mouse no
+focus_follows_mouse yes
 
 #: Set the active window to the window under the mouse when moving the
 #: mouse around
@@ -404,7 +407,7 @@ cursor_blink_interval 0
 
 #:     mouse_map button-name event-type modes action
 
-#: Where ``button-name`` is one of ``left``, ``middle``, ``right`` or
+#: Where ``button-name`s` is one of ``left``, ``middle``, ``right`` or
 #: ``b1 ... b8`` with added keyboard modifiers, for example:
 #: ``ctrl+shift+left`` refers to holding the ctrl+shift keys while
 #: clicking with the left mouse button. The number ``b1 ... b8`` can
@@ -547,7 +550,7 @@ cursor_blink_interval 0
 
 #: }}}
 
-#: }}}
+: }}}
 
 #: Performance tuning {{{
 
@@ -580,7 +583,7 @@ cursor_blink_interval 0
 
 #: }}}
 
-#: Terminal bell {{{
+: Terminal bell {{{
 
 # enable_audio_bell yes
 
@@ -628,7 +631,7 @@ visual_bell_duration 0.1
 #: the operating systems sound API, such as WAV or OGA on Linux
 #: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound)
 
-#: }}}
+: }}}
 
 : Window layout {{{
 
@@ -722,6 +725,7 @@ window_padding_width 2
 #: occurred
 
 # inactive_text_alpha 1.0
+inactive_text_alpha 0.9
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
@@ -805,7 +809,7 @@ window_padding_width 2
 
 : }}}
 
-#: Tab bar {{{
+: Tab bar {{{
 
 # tab_bar_edge bottom
 
@@ -823,6 +827,7 @@ window_padding_width 2
 #: contents of the current tab.
 
 # tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -939,7 +944,7 @@ window_padding_width 2
 #: Color for the tab bar margin area. Defaults to using the terminal
 #: background color.
 
-#: }}}
+: }}}
 
 : Color scheme {{{
 
