Fix kitty.conf errors

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-: Fonts {{{
+#: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
@@ -96,6 +96,7 @@ font_family      Fira Code Nerd Font
 #:     narrow_symbols codepoints Optionally the number of cells
 
 # disable_ligatures never
+disable_ligatures cursor
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
@@ -179,9 +180,9 @@ font_family      Fira Code Nerd Font
 #: monitor DPI to arrive at a pixel value. There must be four values
 #: corresponding to thin, normal, thick, and very thick lines.
 
-: }}}
+#: }}}
 
-: Cursor customization {{{
+#: Cursor customization {{{
 
 # cursor #cccccc
 
@@ -231,7 +232,7 @@ cursor_blink_interval 0
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity.  Set to zero to never stop blinking.
 
-: }}}
+#: }}}
 
 #: Scrollback {{{
 
@@ -301,7 +302,7 @@ cursor_blink_interval 0
 
 #: }}}
 
-: Mouse {{{
+#: Mouse {{{
 
 # mouse_hide_wait 3.0
 mouse_hide_wait 0
@@ -550,7 +551,7 @@ focus_follows_mouse yes
 
 #: }}}
 
-: }}}
+#: }}}
 
 #: Performance tuning {{{
 
@@ -583,7 +584,7 @@ focus_follows_mouse yes
 
 #: }}}
 
-: Terminal bell {{{
+#: Terminal bell {{{
 
 # enable_audio_bell yes
 
@@ -631,9 +632,9 @@ visual_bell_duration 0.1
 #: the operating systems sound API, such as WAV or OGA on Linux
 #: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound)
 
-: }}}
+#: }}}
 
-: Window layout {{{
+#: Window layout {{{
 
 # remember_window_size  yes
 # initial_window_width  640
@@ -725,7 +726,7 @@ window_padding_width 2
 #: occurred
 
 # inactive_text_alpha 1.0
-inactive_text_alpha 0.9
+inactive_text_alpha 0.8
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
@@ -807,9 +808,9 @@ inactive_text_alpha 0.9
 #: https://sw.kovidgoyal.net/kitty/actions/#close-window-with-
 #: confirmation action.
 
-: }}}
+#: }}}
 
-: Tab bar {{{
+#: Tab bar {{{
 
 # tab_bar_edge bottom
 
@@ -944,9 +945,9 @@ tab_bar_style powerline
 #: Color for the tab bar margin area. Defaults to using the terminal
 #: background color.
 
-: }}}
+#: }}}
 
-: Color scheme {{{
+#: Color scheme {{{
 
 # foreground #dddddd
 # background #000000
@@ -1092,7 +1093,7 @@ background_opacity 0.9
 
 #: }}}
 
-: }}}
+#: }}}
 
 #: Advanced {{{
 
