--- a/starship.toml
+++ b/starship.toml
@@ -1,78 +1,13 @@
 format = """
-$username\
-$hostname\
-$localip\
-$shlvl\
-$singularity\
-$kubernetes\
-$directory\
-$vcsh\
-$git_branch\
-$git_commit\
-$git_state\
-$git_metrics\
-$git_status\
-$hg_branch\
-$docker_context\
-$package\
-$buf\
-$c\
-$cmake\
-$cobol\
-$container\
-$dart\
-$deno\
-$dotnet\
-$elixir\
-$elm\
-$erlang\
-$golang\
-$haskell\
-$helm\
-$java\
-$julia\
-$kotlin\
-$lua\
-$nim\
-$nodejs\
-$ocaml\
-$perl\
-$php\
-$pulumi\
-$purescript\
-$python\
-$rlang\
-$red\
-$ruby\
-$rust\
-$scala\
-$swift\
-$terraform\
-$vlang\
-$vagrant\
-$zig\
-$nix_shell\
-$conda\
-$spack\
-$memory_usage\
-$aws\
-$gcloud\
-$openstack\
-$azure\
-$env_var\
-$crystal\
-$custom\
-$sudo\
-$cmd_duration\
+$all\
 $time\
-$fill\
 $line_break\
-$jobs\
-$battery\
-$status\
-$shell\
-$character
+$character\
 """
+
+#home = " "
+#timer = " "
+#clock = " "
 
 [fill]
 symbol = " "
@@ -80,5 +15,13 @@ symbol = " "
 [status]
 disabled = false
 
+[cmd_duration]
+format = " [$duration]($style) "
+
 [time]
+format = " [$time]($style) "
 disabled = false
+
+#[custom.distro_debian]
+#format = " "
+
