--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-#: Fonts {{{
+#: Fonts [[[
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
@@ -181,9 +181,9 @@ disable_ligatures cursor
 #: monitor DPI to arrive at a pixel value. There must be four values
 #: corresponding to thin, normal, thick, and very thick lines.
 
-#: }}}
+#: ]]]
 
-#: Cursor customization {{{
+#: Cursor customization [[[
 
 # cursor #cccccc
 
@@ -233,9 +233,9 @@ cursor_blink_interval 0
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity.  Set to zero to never stop blinking.
 
-#: }}}
+#: ]]]
 
-#: Scrollback {{{
+#: Scrollback [[[
 
 # scrollback_lines 2000
 
@@ -301,9 +301,9 @@ cursor_blink_interval 0
 #: for high precision scrolling devices on platforms such as macOS and
 #: Wayland. Use negative numbers to change scroll direction.
 
-#: }}}
+#: ]]]
 
-#: Mouse {{{
+#: Mouse [[[
 
 # mouse_hide_wait 3.0
 mouse_hide_wait 0
@@ -400,7 +400,7 @@ focus_follows_mouse yes
 #: The default shape of the mouse pointer when dragging across text.
 #: Valid values are: arrow, beam and hand
 
-#: Mouse actions {{{
+#: Mouse actions [[[
 
 #: Mouse buttons can be remapped to perform arbitrary actions. The
 #: syntax for doing so is:
@@ -550,11 +550,11 @@ focus_follows_mouse yes
 #::  Requires https://sw.kovidgoyal.net/kitty/shell-integration/ to
 #::  work
 
-#: }}}
+#: ]]]
 
-#: }}}
+#: ]]]
 
-#: Performance tuning {{{
+#: Performance tuning [[[
 
 # repaint_delay 10
 
@@ -583,9 +583,9 @@ focus_follows_mouse yes
 #: keyboard repeat rate, you may notice some slight input latency. If
 #: so, set this to no.
 
-#: }}}
+#: ]]]
 
-#: Terminal bell {{{
+#: Terminal bell [[[
 
 # enable_audio_bell yes
 
@@ -633,9 +633,9 @@ visual_bell_duration 0.1
 #: the operating systems sound API, such as WAV or OGA on Linux
 #: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound)
 
-#: }}}
+#: ]]]
 
-#: Window layout {{{
+#: Window layout [[[
 
 # remember_window_size  yes
 # initial_window_width  640
@@ -809,9 +809,9 @@ inactive_text_alpha 0.8
 #: https://sw.kovidgoyal.net/kitty/actions/#close-window-with-
 #: confirmation action.
 
-#: }}}
+#: ]]]
 
-#: Tab bar {{{
+#: Tab bar [[[
 
 # tab_bar_edge bottom
 
@@ -946,9 +946,9 @@ tab_bar_style powerline
 #: Color for the tab bar margin area. Defaults to using the terminal
 #: background color.
 
-#: }}}
+#: ]]]
 
-#: Color scheme {{{
+#: Color scheme [[[
 
 # foreground #dddddd
 # background #000000
@@ -1022,7 +1022,7 @@ background_opacity 0.9
 #: to be used unchanged. Note that these colors can be overridden by
 #: the program running in the terminal.
 
-#: The color table {{{
+#: The color table [[[
 
 #: The 256 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version, for the first 16 colors. You can set the
@@ -1092,11 +1092,11 @@ background_opacity 0.9
 
 #: Color for marks of type 3 (violet)
 
-#: }}}
+#: ]]]
 
-#: }}}
+#: ]]]
 
-#: Advanced {{{
+#: Advanced [[[
 
 # shell .
 
@@ -1274,9 +1274,9 @@ background_opacity 0.9
 #: work. Changing this option by reloading the config will only affect
 #: newly created windows.
 
-#: }}}
+#: ]]]
 
-#: OS specific tweaks {{{
+#: OS specific tweaks [[[
 
 # wayland_titlebar_color system
 
@@ -1368,9 +1368,9 @@ background_opacity 0.9
 #: to x11 or wayland to force the choice. Changing this setting by
 #: reloading the config is not supported.
 
-#: }}}
+#: ]]]
 
-#: Keyboard shortcuts {{{
+#: Keyboard shortcuts [[[
 
 #: Keys are identified simply by their lowercase unicode characters.
 #: For example: ``a`` for the A key, ``[`` for the left square bracket
@@ -1478,7 +1478,7 @@ background_opacity 0.9
 #: cause all invocations of the hints kitten to have the --hints-
 #: offset=0 option applied.
 
-#: Clipboard {{{
+#: Clipboard [[[
 
 #: Copy to clipboard
 
@@ -1516,9 +1516,9 @@ background_opacity 0.9
 
 #::      map kitty_mod+y new_window less @selection
 
-#: }}}
+#: ]]]
 
-#: Scrolling {{{
+#: Scrolling [[[
 
 #: Scroll line up
 
@@ -1607,9 +1607,9 @@ background_opacity 0.9
 #::  Requires https://sw.kovidgoyal.net/kitty/shell-integration/ to
 #::  work.
 
-#: }}}
+#: ]]]
 
-#: Window management {{{
+#: Window management [[[
 
 #: New window
 
@@ -1737,9 +1737,9 @@ background_opacity 0.9
 
 # map kitty_mod+f8 swap_with_window
 
-#: }}}
+#: ]]]
 
-#: Tab management {{{
+#: Tab management [[[
 
 #: Next tab
 
@@ -1794,9 +1794,9 @@ background_opacity 0.9
 #: the current tab rather than at the end of the tabs list, use::
 
 #:     map ctrl+t new_tab !neighbor [optional cmd to run]
-#: }}}
+#: ]]]
 
-#: Layout management {{{
+#: Layout management [[[
 
 #: Next layout
 
@@ -1818,9 +1818,9 @@ background_opacity 0.9
 #: stack layout::
 
 #:     map ctrl+alt+z toggle_layout stack
-#: }}}
+#: ]]]
 
-#: Font sizes {{{
+#: Font sizes [[[
 
 #: You can change the font size for all top-level kitty OS windows at
 #: a time or only the current one.
@@ -1855,9 +1855,9 @@ background_opacity 0.9
 #: size::
 
 #:     map kitty_mod+f6 change_font_size current 10.0
-#: }}}
+#: ]]]
 
-#: Select and act on visible text {{{
+#: Select and act on visible text [[[
 
 #: Use the hints kitten to select text and either pass it to an
 #: external program or insert it into the terminal or copy it to the
@@ -1922,9 +1922,9 @@ background_opacity 0.9
 
 #: The hints kitten has many more modes of operation that you can map
 #: to different shortcuts. For a full description see kittens/hints.
-#: }}}
+#: ]]]
 
-#: Miscellaneous {{{
+#: Miscellaneous [[[
 
 #: Toggle fullscreen
 
@@ -2061,9 +2061,9 @@ background_opacity 0.9
 #::      map ctrl+alt+a send_text normal Word\x1b[H
 #::      map ctrl+alt+a send_text application Word\x1bOH
 
-#: }}}
+#: ]]]
 
-#: }}}
+#: ]]]
 
 
 # BEGIN_KITTY_THEME
