Give starship.toml a home
Give zshrc a home

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -5,10 +5,10 @@
 depends = []
 
 [zsh.files]
-"zshrc" = "~/.zshrc"
+"zsh/zshrc" = "~/.zshrc"
 
 [starship.files]
-"starship.toml" = "~/.config/starship.toml"
+"starship/starship.toml" = "~/.config/starship.toml"
 
 [kitty.files]
 "kitty" = "~/.config/kitty"
