Use kitty symbol_map instead of patched font

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,8 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      FiraCode Nerd Font 
-font_family      JetBrainsMono Nerd Font
+# font_family      monospace
+font_family      JetBrains Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -26,6 +26,7 @@ font_family      JetBrainsMono Nerd Font
 #:     bold_italic_font Operator Mono Medium Italic
 
 # font_size 11.0
+font_size 13
 
 #: Font size (in pts)
 
@@ -69,6 +70,7 @@ font_family      JetBrainsMono Nerd Font
 #: accordingly.
 
 # symbol_map
+symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E62F,U+E700-U+E7C5,U+F000-U+F2E0,U+F300-U+F31C,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font
 
 #: E.g. symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
@@ -296,6 +298,7 @@ cursor_blink_interval 0
 #: lines will always be added.
 
 # touch_scroll_multiplier 1.0
+touch_scroll_multiplier 2.0
 
 #: Modify the amount scrolled by a touchpad. Note this is only used
 #: for high precision scrolling devices on platforms such as macOS and
@@ -696,6 +699,7 @@ visual_bell_duration 0.1
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
+# window_padding_width 0
 window_padding_width 2
 
 #: The window padding (in pts) (blank area between the text and the
@@ -1279,6 +1283,7 @@ background_opacity 0.9
 #: OS specific tweaks [[[
 
 # wayland_titlebar_color system
+wayland_titlebar_color background
 
 #: Change the color of the kitty window's titlebar on Wayland systems
 #: with client side window decorations such as GNOME. A value of
