Update kanagawabones theme

--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -35,8 +35,8 @@ color10 #9EC967
 color3  #E5C283
 color11 #F1C982
 # blue
-color4  #7EB3C9
-color12 #7BC2DF
+color4  #6C6FA3
+color12 #7782B5
 # magenta
 color5  #957FB8
 color13 #A98FD2
