--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -158,41 +158,41 @@ style = "bold yellow"
 disabled = false
 
 [os.symbols]
-"Alpine" = " "
-"Amazon" = " "
-"Android" = " "
-"Arch" = " "
-"CentOS" = " "
-"Debian" = " "
-"DragonFly" = " "
-"Emscripten" = " "
-"EndeavourOS" = " "
-"Fedora" = " "
-"FreeBSD" = " "
-"Gentoo" = " "
-"HardenedBSD" = "ﲊ "
-"Illumos" = " "
-"Linux" = " "
-"Macos" = " "
-"Manjaro" = " "
-"Mariner" = " "
-"MidnightBSD" = " "
-"Mint" = " "
-"NetBSD" = " "
-"NixOS" = " "
-"OpenBSD" = " "
-"openSUSE" = " "
-"OracleLinux" = " "
-"Pop" = " "
-"Raspbian" = " "
-"Redhat" = " "
-"RedHatEnterprise" = " "
-"Redox" = " "
-"Solus" = "ﴱ "
-"SUSE" = " "
-"Ubuntu" = " "
-"Unknown" = " "
-"Windows" = " "
+Alpine = " "
+Amazon = " "
+Android = " "
+Arch = " "
+CentOS = " "
+Debian = " "
+DragonFly = " "
+Emscripten = " "
+EndeavourOS = " "
+Fedora = " "
+FreeBSD = " "
+Gentoo = " "
+HardenedBSD = "ﲊ "
+Illumos = " "
+Linux = " "
+Macos = " "
+Manjaro = " "
+Mariner = " "
+MidnightBSD = " "
+Mint = " "
+NetBSD = " "
+NixOS = " "
+OpenBSD = " "
+openSUSE = " "
+OracleLinux = " "
+Pop = " "
+Raspbian = " "
+Redhat = " "
+RedHatEnterprise = " "
+Redox = " "
+Solus = "ﴱ "
+SUSE = " "
+Ubuntu = " "
+Unknown = " "
+Windows = " "
 
 [shlvl]
 format = "[$symbol]($style)"
