--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -5,45 +5,44 @@
 ## license: MIT
 ## upstream: https://github.com/mcchrish/zenbones.nvim/raw/main/extras/kitty/kanagawabones.conf
 ## blurb: A zenbones variant inspired by Kanagawa.
-foreground                      #DDD8BB
-background                      #1F1F28
-selection_foreground            #DDD8BB
-selection_background            #49473E
+foreground                      {{palette.foreground}}
+background                      {{palette.background}}
+selection_foreground            {{palette.selection_foreground}}
+selection_background            {{palette.selection_background}}
 # Cursor colors
-cursor                          #E6E0C2
-cursor_text_color               #1F1F28
+cursor                          {{palette.cursor}}
+cursor_text_color               {{palette.cursor_text_color}}
 # URL underline color when hovering with mouse
 # kitty window border colors
 # OS Window titlebar colors
 # Tab bar colors
-active_tab_foreground           #DDD8BB
-active_tab_background           #614A82
-inactive_tab_foreground         #DDD8BB
-inactive_tab_background         #363644
+active_tab_foreground           {{palette.active_tab_foreground}}
+active_tab_background           {{palette.active_tab_background}}
+inactive_tab_foreground         {{palette.inactive_tab_foreground}}
+inactive_tab_background         {{palette.inactive_tab_background}}
 # Colors for marks (marked text in the terminal)
 # The basic 16 colors
 # black
-color0 #1F1F28
-color8 #3C3C51
+color0 {{palette.color0}}
+color8 {{palette.color8}}
 # red
-color1 #E46A78
-color9 #EC818C
+color1 {{palette.color1}}
+color9 {{palette.color9}}
 # green
-color2  #98BC6D
-color10 #9EC967
+color2  {{palette.color2}}
+color10 {{palette.color10}}
 # yellow
-color3  #E5C283
-color11 #F1C982
+color3  {{palette.color3}}
+color11 {{palette.color11}}
 # blue
-color4  #6C6FA3
-color12 #7782B5
+color4  {{palette.color4}}
+color12 {{palette.color12}}
 # magenta
-color5  #957FB8
-color13 #A98FD2
+color5  {{palette.color5}}
+color13 {{palette.color13}}
 # cyan
-color6  #7EB3C9
-color14 #7BC2DF
+color6  {{palette.color6}}
+color14 {{palette.color14}}
 # white
-color7  #DDD8BB
-color15 #A8A48D
-# You can set the remaining 240 colors as color16 to color255.
+color7  {{palette.color7}}
+color15 {{palette.color15}}
