fix(hyprland): fix Hyprland config directory

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -40,7 +40,7 @@ kitty.shell = "bash"
 [palette]
 
 [hyprland.files]
-"hyprland" = "~/.config/hyprland"
+"hyprland" = "~/.config/hypr"
 
 [hyprland.variables]
 hyprland.launcher = "wofi"
