feat(helpers): add hex hash remover helper

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -31,8 +31,8 @@ general {
   gaps_in = 5
   gaps_out = 5
 
-  col.active_border = rgb({{hex_to_rgb palette.active_tab_foreground}})
-  col.inactive_border = rgb({{hex_to_rgb palette.inactive_tab_foreground}})
+  col.active_border = rgb({{hex palette.active_tab_foreground}})
+  col.inactive_border = rgb({{hex palette.inactive_tab_foreground}})
 
   layout = dwindle
 }
@@ -50,7 +50,7 @@ decoration {
   shadow_offset = 2 2
   shadow_range = 4
   shadow_render_power = 1
-  col.shadow = rgb({{hex_to_rgb palette.background}})
+  col.shadow = rgb({{hex palette.background}})
 }
 
 animations {
