feat: adjust windows

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -31,21 +31,21 @@ general {
   gaps_in = 5
   gaps_out = 5
 
-  col.active_border = rgb({{hex palette.active_tab_foreground}})
-  col.inactive_border = rgb({{hex palette.inactive_tab_foreground}})
+  col.active_border = rgb({{hex palette.active_tab_background}})
+  col.inactive_border = rgb({{hex palette.inactive_tab_background}})
 
   layout = dwindle
 }
 
 decoration {
-  rounding = 5
+  rounding = 16
   
-  blur = false
+  blur = true
   blur_size = 3
   blur_passes = 1
   blur_new_optimizations = true
 
-  drop_shadow = false
+  drop_shadow = true
   shadow_ignore_window = true
   shadow_offset = 2 2
   shadow_range = 4
